[package]
name = "dada-reference-grammar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.5"
miette = { version = "4.6.0", features = ["fancy"] }
id_tree = "1.8.0"
id_tree_layout = "2.0.2"
lazy_static = "1.4.0"
parol_runtime = "0.5.9"
